--- a/templates/mixin/posts/post_card.html
+++ b/templates/mixin/posts/post_card.html
@@ -1,61 +1,70 @@
 {% load static %}
 <div class="card">
-
-    <div class="card-header">
-        <img src="http://via.placeholder.com/50x50" alt="프로필이미지">
+    <div class="card__header">
+        <img src="http://via.placeholder.com/32x32" alt="프로필이미지">
         <a href="#">
-            <span class="card_user-name">{{post.writer}}</span>
+            <span class="card__user-name">{{ post.writer }}</span>
         </a>
+        {% if request.user == post.writer %}
+        <a href="{% url 'posts:post-update' post.id %}">수정하기</a> |
+        <a href="{% url 'posts:post-delete' post.id %}">삭제하기</a>
+        {% endif %}
     </div>
-
-    <div class="card_body">
+    <div class="card__body">
         <div>
             {% if post.image %}
-            <img class="card_image" src="{{post.image.url}}" alt="메인이미지">
+            <img class="card__image" src="{{ post.image.url }}" alt="">
             {% else %}
-            <img class="card_image" src="http://via.placeholder.com/600x600" alt="메인이미지">
+            <img class="card__image" src="http://via.placeholder.com/600x600" alt="">
             {% endif %}
         </div>
-        <div class="card-btn-group">
-            <img class="card_btn" src="{% static 'icons/favorite_outlined_black_36dp.svg' %}" alt="좋아요">
-            <img class="card_btn" src="{% static 'icons/mode_comment_outlined_black_36dp.svg' %}" alt="댓글">
-            <img class="card_btn" src="{% static 'icons/send_outlined_black_36dp.svg' %}" alt="공유하기">
-        </div>
-
-        <div>
-            <img class="card_btn" src="{% static 'icons/bookmark_outlined_black_36dp.svg' %}" alt="저장">
-        </div>
-
-        <div class="card_content">
-            <span class="card_like-num">좋아요 00개</span>
-            <div class="card_main-text">
-                <p><span class="card_user-name">{{post.writer}}</span>
-                    {%if not detail%}
-                    {{post.content|truncatechars:35}}</p>
-                {% else %}
-                {{post.content}}
-                {%endif %}
-
-                {%if not detail%}
-                <a href="{% url 'posts:post-detail' post.id%}">더보기</a>
-                {% endif %}
+        <div class="card__btn-group">
+            <div>
+                <img class="card__btn" src="{% static 'icons/favorite_outlined_black_36dp.svg' %}" alt="좋아요">
+                <img class="card__btn" src="{% static 'icons/mode_comment_outlined_black_36dp.svg' %}" alt="댓글">
+                <img class="card__btn" src="{% static 'icons/send_outlined_black_36dp.svg' %}" alt="공유하기">
             </div>
             <div>
-                <p>댓글 {{post.comment_set.all.count}}개 모두 보기</p>
-                <ul class="card_comment-group">
+                <img class="card__btn" src="{% static 'icons/bookmark_outlined_black_36dp.svg' %}" alt="북마크">
+            </div>
+        </div>
+        <div class="card_content">
+            <span class="card__like-num">좋아요 00개</span>
+            <div class="card__main-text">
+                <p><span class="card__user-name">{{ post.writer }}</span>
                     {% if not detail %}
-                    {% for comment in post.comment_set.all|slice:"2"%}
+                    {{post.content|truncatechars:35}}
+                    {% else %}
+                    {{post.content}}
+                    {% endif %}
+                </p>
+                {% if not detail %}
+                <a href="{% url 'posts:post-detail' post.id %}">더보기</a>
+                {% endif %}
+                <!-- /posts/{{post.id}} -->
+            </div>
+            <div>
+                <p>댓글 {{ post.comment_set.all.count }}개
+                    {% if not detail %}
+                    <a href="{% url 'posts:post-detail' post.id %}">모두 보기</a>
+                    {% endif %}
+                </p>
+                <ul class="card__comment-group">
+                    {% if not detail %}
+                    {% for comment in post.comment_set.all|slice:":2" %}
                     <li>
-                        <p><span class="card_user-name">{{comment.writer}} </span>{{comment.content}}</p>
+                        <p><span class="card__user-name">{{ comment.writer }}</span>{{ comment.content }}</p>
                     </li>
                     {% endfor %}
                     {% else %}
+                    {% for comment in post.comment_set.all %}
                     <li>
-                        <p><span class="card_user-name">{{comment.writer}} </span>{{comment.content}}</p>
+                        <p><span class="card__user-name">{{ comment.writer }}</span>{{ comment.content }}</p>
                     </li>
+                    {% endfor %}
                     {% endif %}
                 </ul>
-                <p>{{post.created_at|date:"Y년 m월 d일"}}</p>
+                <p class="card__created-at">{{post.created_at|date:"Y년 m월 d일"}}</p>
             </div>
         </div>
     </div>
