--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,15 @@
       </ul>
     </nav>
   </div>
+  <div>
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'accounts:logout' %}">로그아웃</a>
+    {% else %}
+    <a href="{% url 'accounts:login' %}">로그인</a>
+    <a href="{% url 'accounts:signup' %}">회원가입</a>
+    {% endif %}
+  </div>
+
 </body>
 
 </html>
